--- a/qterminal.ini
+++ b/qterminal.ini
@@ -1,10 +1,10 @@
 [General]
-AskOnExit=false
+AskOnExit=true
 AudibleBell=false
 BoldIntense=true
-BookmarksFile=/home/sk/.config/qterminal.org/qterminal_bookmarks.xml
+BookmarksFile=./qterminal_bookmarks.xml
 BookmarksVisible=false
-Borderless=true
+Borderless=false
 ChangeWindowIcon=true
 ChangeWindowTitle=true
 CloseTabOnMiddleClick=true
@@ -13,10 +13,10 @@ DisableBracketedPasteMode=false
 FixedTabWidth=true
 FixedTabWidthValue=500
 HandleHistory=
-HideTabBarWithOneTab=false
+HideTabBarWithOneTab=true
 HistoryLimited=true
 HistoryLimitedTo=1000
-KeyboardCursorBlink=true
+KeyboardCursorBlink=false
 KeyboardCursorShape=0
 LastWindowMaximized=true
 MenuVisible=false
@@ -35,31 +35,31 @@ TabsPosition=0
 Term=xterm-256color
 TerminalBackgroundImage=
 TerminalBackgroundMode=0
-TerminalMargin=2
-TerminalTransparency=5
+TerminalMargin=1
+TerminalTransparency=10
 TerminalsPreset=0
 TrimPastedTrailingNewlines=false
 UseBookmarks=false
 UseCWD=true
 UseFontBoxDrawingChars=false
 WordCharacters=:@-./_~
-colorScheme=BreezeModified
+colorScheme=DarkPastels
 emulation=default
 enabledBidiSupport=true
 focusOnMoueOver=false
-fontFamily=Monospace
-fontSize=12
+fontFamily=Adwaita Mono
+fontSize=14
 guiStyle=
 highlightCurrentTerminal=true
 showTerminalSizeHint=true
 version=2.2.1
 
 [DropMode]
-Height=45
+Height=100
 KeepOpen=false
 ShortCut=F12
 ShowOnStart=true
-Width=70
+Width=100
 
 [MainWindow]
 fixedSize=@Size(600 400)
@@ -72,32 +72,32 @@ size=0
 
 [Shortcuts]
 Add%20Tab=Ctrl+Shift+T
-Bottom%20Subterminal=Alt+Down
+Bottom%20Subterminal=Alt+Down|Alt+J
 Clear%20Active%20Terminal=Ctrl+Shift+X
 Close%20Tab=Ctrl+Shift+W
 Collapse%20Subterminal=Alt+Q
-Copy%20Selection=Ctrl+Shift+C
+Copy%20Selection=Ctrl+C
 Find=Ctrl+Shift+F
 Fullscreen=F11
 Handle%20history=
 Hide%20Window%20Borders=
-Left%20Subterminal=Alt+Left
+Left%20Subterminal=Alt+Left|Alt+H
 Move%20Tab%20Left=Alt+Shift+Left|Ctrl+Shift+PgUp
 Move%20Tab%20Right=Alt+Shift+Right|Ctrl+Shift+PgDown
 New%20Window=Ctrl+Shift+N
 Next%20Tab=Ctrl+PgDown
 Next%20Tab%20in%20History=Ctrl+Shift+Tab
-Paste%20Clipboard=Ctrl+Shift+V
+Paste%20Clipboard=Ctrl+V
 Paste%20Selection=Shift+Ins
 Preferences...=
 Previous%20Tab=Ctrl+PgUp
 Previous%20Tab%20in%20History=Ctrl+Tab
 Quit=
 Rename%20Session=Alt+Shift+S
-Right%20Subterminal=Alt+Right
+Right%20Subterminal=Alt+Right|Alt+L
 Show%20Tab%20Bar=
 Split%20View%20Left-Right=Alt+V
-Split%20View%20Top-Bottom=Alt+H
+Split%20View%20Top-Bottom=Alt+B
 Tab%201=
 Tab%2010=
 Tab%202=
@@ -109,8 +109,8 @@ Tab%207=
 Tab%208=
 Tab%209=
 Toggle%20Bookmarks=Ctrl+Shift+B
-Toggle%20Menu=Alt+M
-Top%20Subterminal=Alt+Up
+Toggle%20Menu=Ctrl+Shift+M
+Top%20Subterminal=Alt+Up|Alt+K
 Zoom%20in=Ctrl++
 Zoom%20out=Ctrl+-
 Zoom%20reset=Ctrl+0
